# the-room-system

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_en_US.md  config.toml  requirements.txt  run.py
.github/workflows/: ci.yml
release-assets/: trs-0.1.0-py3-none-any.whl
roomsystem/: __init__.py  app.py  auth.py  auth_token.py  cleanup.py  config.py  deprecation.py  errors.py  net.py  presign.py  realtime.py  routes.py  routes_v3.py  security.py  store.py  streaming.py  thumbs.py
static/: error.js  style.css  toast.css  toast.js  upload-queue.js
templates/: admin.html  login.html  room.html  share.html
tests/: test_cli.py  test_smoke.py
trs/: README.md  pyproject.toml
trs/trs/: __init__.py  cli.py  client.py  config.py
