[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "trs"
version = "0.1.0"
description = "Official CLI and Python SDK for The Room System"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "snake-aabb-wtf"}]
keywords = ["cli", "sdk", "the-room-system", "file-sharing", "lan"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.27",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
trs = "trs.cli:main"

[project.urls]
Homepage = "https://github.com/snake-aabb-wtf/the-room-system"
